@startuml

hide circle
skinparam classAttributeIconSize 0


    class DeleteExpenseCommand {
        # String input
        # CommandType commandType
        # String outputMessage
        + DeleteExpenseCommand(String input)
        + execute(List<Income> incomes, ExpenseList expenseList)
    }
    abstract class "{abstract} \n Command" {
        + CommandType: commandType
        + Command(String input)
    }



    class ExpenseList {
        + int getSize()
        + Expense get(int index)
        + void delete(int index)
        + double getAmount()
    }


class Income {

}


class InvalidNumberFormatException {
    + InvalidNumberFormatException(String message)
}


DeleteExpenseCommand --|> "{abstract} \n Command" : extends
DeleteExpenseCommand --> ExpenseList : uses
DeleteExpenseCommand --> Income : uses
DeleteExpenseCommand --> InvalidNumberFormatException : throws
@enduml
